--- a/newIndex.html
+++ b/newIndex.html
@@ -69,7 +69,7 @@
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
-        <h3 class="mb-4">Die letzten 5 Touren:</h3>
+        <h3 class="mb-4">Letzte 5 Touren</h3>
         <div id="tourList"></div>
         <div class="d-flex justify-content-end mt-4">
           <a class="btn btn-primary text-uppercase" href="archiv.html">Alle Touren ansehen</a>
