--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
           <div class="site-heading">
             <h1>AlpenSammlung</h1>
-            <span class="subheading">Wanderblog von Fabian Mauron</span>
+            <span class="subheading">Wandersammlung von Fabian Mauron</span>
           </div>
         </div>
       </div>
