--- a/post.html
+++ b/post.html
@@ -60,7 +60,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
-                        <h1>Archiv</h1>
+                        <h1>Tourensammlung</h1>
                         <span class="subheading">Alle dokumentierten Wanderungen</span>
                     </div>
                 </div>
